# osrs-hiscores

./: .gitignore  docker-compose.yml
api/: index.js  package-lock.json  package.json
pipeline/: Makefile  alembic.ini  flow.py  pyproject.toml
pipeline/migrations/: env.py
pipeline/migrations/versions/: 6e109cf7d6f6_add_initial_tables.py
pipeline/src/osrs/: database.py  pipeline.py  pipeline.py.md  remote.py
pipeline/tests/: test_pipeline.py
