[tool.poetry]
name = "osrs-hiscores"
version = "0.1.0"
description = ""
authors = ["Andrew Sosa <andrew@andrewsosa.dev>"]
packages = [
    { include = "osrs", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
apache-beam = "^2.37.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
